--- a/website/styles.css
+++ b/website/styles.css
@@ -1,4 +1,13 @@
-.doctor-who-content img
-	{
-		float: left; 
-	}
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	background-color: #1C1C1C;
+}
+.wrapper {
+	width: 950px;
+	margin-right: auto;
+	margin-left: auto;
+}
+td {
+	background-color: #A0ACB9;
+}
